--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700;800&display=swap");
 
 body {
   margin: 0px;
@@ -6,7 +6,7 @@ body {
 }
 
 * {
-  font-family: 'Manrope', sans-serif;
+  font-family: "Manrope", sans-serif;
 }
 
 a {
